--- a/src/main/resources/recursos/app.properties
+++ b/src/main/resources/recursos/app.properties
@@ -1,5 +1,10 @@
+tarifa.modo=AUTO
 
-# Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-# Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
+# TARIFA PLANA
+tarifa.plana=15
 
+# TARIFA POR HORA
+tarifa.valor=5
 
+# TARIFA POR FRACCION
+fraccion.minutos=15
